--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,14 @@
 }
 .jumbotron {
   margin: 20px;
-  background-color: #90EE90;
+  background-image: url("img/pizza_pic.png");
+  background-blend-mode:hard-light;
+  /* background-color: #90EE90; */
 }
+h2 {
+  font-weight: bold;
+}
+
 button {
   background-color: #90EE90;
 }
